--- a/templates/publicusers/users.html
+++ b/templates/publicusers/users.html
@@ -30,4 +30,4 @@
         </div>
     {% endfor %}
 </div>
-{% show_more "Load more" "" %}
+{% show_more '<i class="fa fa-refresh"></i>' '<i class="fa fa-spin fa-refresh"></i>' %}
