--- a/templates/publicusers/userlist.html
+++ b/templates/publicusers/userlist.html
@@ -153,7 +153,7 @@
         });
     })();
     $.endlessPaginate({
-        //paginateOnScroll: true,
+        paginateOnScroll: true,
         paginateOnScrollMargin: 20
     });
     $('.btn-filter').click(function(){
