--- a/templates/autosignup/signupinfo.html
+++ b/templates/autosignup/signupinfo.html
@@ -8,7 +8,11 @@
     <hr>
     <h4>Fullname: {{ signup.user.first_name }} {{ signup.user.last_name }}</h4>
     <hr>
-    <h4>Email: {{ signup.useremail }} <span class="label label-success">{% trans "Validated" %}</span></h4>
+    <h4>Email: {{ signup.useremail }}
+        {% if signup.useremail %}
+            <span class="label label-success">{% trans "Validated" %}</span>
+        {% endif %}
+    </h4>
     {% if globalemails %}
     <p>
         <span class="fa fa-exclamation-triangle text-red"></span>
@@ -27,7 +31,18 @@
     </p>
     {% endif %}
     <hr>
-    <h4>Phone No: {{ signup.userphone }} <span class="label label-info">{% trans "Mobile" %}</span> {% if signup.not_verifiable_number %}<span class="label label-warning">{% trans "Not a Verifiable No" %}</span>{% else %}<span class="label label-success">{% trans "Validated" %}</span>{% endif %}</h4>
+    <h4>Phone No: {{ signup.userphone }}
+        {% if signup.userphone %}
+        <span class="label label-info">{% trans "Mobile" %}</span>
+        {% endif %}
+        {% if signup.not_verifiable_number %}
+        <span class="label label-warning">{% trans "Not a Verifiable No" %}</span>
+        {% else %}
+        {% if signup.userphone %}
+        <span class="label label-success">{% trans "Validated" %}</span>
+        {% endif %}
+        {% endif %}
+    </h4>
     {% if globalphones %}
     <p>
         <span class="fa fa-exclamation-triangle text-red"></span>
