--- a/templates/autosignup/signups.html
+++ b/templates/autosignup/signups.html
@@ -32,6 +32,7 @@
                                 <option value="pending">{% trans "Pending" %}</option>
                                 <option value="approved">{% trans "Approved" %}</option>
                                 <option value="declined">{% trans "Declined" %}</option>
+                                <option value="incomplete">{% trans "Incomplete" %}</option>
                             </select>
                             <a href="{% url 'autosignup:signups_settings' %}" class="btn btn-box-tool"><i class="fa fa-wrench"></i></a>
                         </form>
