--- a/templates/autosignup/settings.html
+++ b/templates/autosignup/settings.html
@@ -232,7 +232,7 @@
             data: {'id': {{ accountprovider.id }}, 'ranges': $("#memberslider").val() },
             success: function(data){
                 var blob=new Blob([data], {type: "text/plain;charset=utf-8"});
-                saveAs(blob, "membercsv_" + moment().format('DD_MM_YYYY_h_mm_ss_a') + ".csv");
+                saveAs(blob, "membercsv_" + moment().format('MM-DD-YYYY_h_mm_ss_a') + ".csv");
                 self.text("{% trans "Download Member Data CSV" %}");
             }
         });
