--- a/templates/publicusers/userlist.html
+++ b/templates/publicusers/userlist.html
@@ -223,6 +223,7 @@
     });
     $('.member-username').mouseenter(function() {
         if ($(this)[0].scrollWidth > $(this).innerWidth()) {
+            console.log("exec");
             $(this).addClass('marquee');
         }
     });
