reduced logo.png size

--- a/templates/landing_base.html
+++ b/templates/landing_base.html
@@ -63,7 +63,7 @@
 						<span class="icon icon-bar"></span>
 					</button>
 					<a href="/" class="navbar-brand">
-						<img alt="Brand" src="{% static "dist/img/logo.png" %}" height="40" width="40">
+						<img alt="Brand" src="{% static "dist/img/logo.png" %}?v=1" height="40" width="40">
 					</a>
 					<h3 class="navbar-text">EKATA</h3>
 				</div>
