--- a/templates/landing/index.html
+++ b/templates/landing/index.html
@@ -1,5 +1,5 @@
 {% extends "landing_base.html" %}
-{% load staticfiles i18n bootstrap_tags recaptcha2 %}
+{% load staticfiles i18n bootstrap_tags recaptcha2 compress %}
 {% block title %}
 	Welcome
 {% endblock %}
@@ -393,6 +393,7 @@ end support -->
 end download -->
 {% endblock %}
 {% block extrascripts %}
+	{% compress js %}
 	<script type="text/javascript">
 		$(document).on('submit', '#getinviteform', function(event){
 			event.preventDefault();
@@ -421,4 +422,5 @@ end download -->
 			});
 		});
 	</script>
+	{% endcompress %}
 {% endblock %}
