--- a/templates/eblast/emailgroups_page.html
+++ b/templates/eblast/emailgroups_page.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% load i18n staticfiles bootstrap_tags %}
+{% load i18n staticfiles bootstrap_tags compress %}
 {% block title %}
     {% trans "EmailGroups | eBlast" %}
 {% endblock title %}
@@ -77,6 +77,7 @@
     </div>
 {% endblock %}
 {% block extrascripts %}
+    {% compress js %}
     <script type="text/javascript">
         function loadEmailGroup(id) {
             $('.listcontent-content').load('{% url 'eblast:emailgroups' %}?emailgroup=' + id, function(){
@@ -314,4 +315,5 @@
             });
         });
     </script>
+    {% endcompress %}
 {% endblock %}
