--- a/templates/groupsystem/adminsettings.html
+++ b/templates/groupsystem/adminsettings.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% load i18n bootstrap_tags guardian_tags %}
+{% load i18n bootstrap_tags guardian_tags compress %}
 {% block title %}
     {{ group.name }} | {% trans "Admin" %} | {% trans "Settings" %}
 {% endblock title %}
@@ -113,6 +113,7 @@
     </div><!-- /.Create Notification Modal -->
 {% endblock content %}
 {% block extrascripts %}
+    {% compress js %}
     <script>
         var val = $("#id_group_type").val();
         if (val === '9') {
@@ -175,4 +176,5 @@
             });
         });
     </script>
+    {% endcompress %}
 {% endblock extrascripts %}
