--- a/templates/groupsystem/posts.html
+++ b/templates/groupsystem/posts.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% load i18n staticfiles guardian_tags %}
+{% load i18n staticfiles guardian_tags compress %}
 {% block title %}
     {{ group.name }} | Posts
 {% endblock title %}
@@ -99,6 +99,7 @@
     {% endif %}
 {% endblock content %}
 {% block extrascripts %}
+    {% compress js %}
     <script>
         {% if memberpost %}
             $("#id_post").wysihtml5({
@@ -154,4 +155,5 @@
             });
         {% endif %}
     </script>
+    {% endcompress %}
 {% endblock extrascripts %}
